<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textDirection="ltr"
        android:visibility="visible"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:background="@color/mowater_color">

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:textDirection="ltr"
                android:visibility="visible"
                android:weightSum="6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:weightSum="10">


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/LoginTextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/name"
                            android:layoutDirection="rtl"
                            android:textDirection="rtl"
                            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                            app:hintTextColor="@color/base_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_register_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLines="1"
                                android:shadowColor="@color/base_color"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/base_color" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout

                            style="@style/LoginTextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/password"
                            android:layoutDirection="rtl"
                            android:textDirection="rtl"
                            app:errorEnabled="true"
                            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                            app:hintTextColor="@color/base_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_register_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:shadowColor="@color/base_color"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/base_color" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:weightSum="10">


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/LoginTextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/confirm_password"
                            android:layoutDirection="rtl"
                            android:textDirection="rtl"
                            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                            app:hintTextColor="@color/base_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_register_confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:shadowColor="@color/base_color"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/base_color" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/LoginTextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/phone"
                            android:layoutDirection="rtl"
                            android:textDirection="rtl"
                            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                            app:hintTextColor="@color/base_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_register_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLines="1"
                                android:shadowColor="@color/base_color"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/base_color" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/LoginTextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="10dp"
                            android:hint="@string/mail"
                            android:layoutDirection="rtl"
                            android:textDirection="rtl"
                            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                            app:hintTextColor="@color/base_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_register_mail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:maxLines="1"
                                android:shadowColor="@color/base_color"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/base_color" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/style_edittext">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:text="@string/gender"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/base_color"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/rg_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rb_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:buttonTint="@color/base_color"
                                android:text="@string/male" />

                            <RadioButton
                                android:id="@+id/rb_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/base_color"
                                android:text="@string/female" />


                        </RadioGroup>

                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_date_of_birth"
                            android:layout_width="match_parent"
                            android:layout_height="?actionBarSize"
                            android:layout_marginHorizontal="10dp"
                            android:background="@drawable/style_edittext"
                            android:padding="5dp"
                            android:text="@string/date_of_birth"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/base_color" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight=".5"
            android:text="@string/register"
            android:background="@drawable/corner_shape"
            android:backgroundTint="@color/mowater_color"
            android:textColor="@color/white" />
        <ProgressBar
            android:id="@+id/progress_bar_register"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight=".5"
            android:text="@string/register"
            android:backgroundTint="@color/mowater_color"
            android:indeterminateTint="@color/mowater_color"
            android:textColor="@color/white"
            android:visibility="gone"/>
    </LinearLayout>

</RelativeLayout>